--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue3-bootstrap5-boilerplate",
+  "name": "hatch-n-slash",
   "version": "1.0.0",
-  "description": "vue3 bootstrap5 boilerplate",
+  "description": "idle browser rpg with dragons",
   "license": "Unlicense",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -20,10 +20,11 @@
     "url": "https://www.patreon.com/slybootsstudio/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^0.21.1",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2",
-    "bootswatch": "^5.1.3",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "bootswatch": "^5.2.3",
     "core-js": "^3.12.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -41,7 +42,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
-    "gh-pages": "^3.1.0",
-    "prettier": "^2.3.0"
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.4.1"
   }
 }
